# AdventOfCodeMega

./: README.md
2024/javasol/: pom.xml
2024/javasol/src/test/java/com/chri1899/javasol/: AppTest.java
data/2024/: day01_test.txt  day02_real.txt  test.txt
helpers/javahelpers/: pom.xml
helpers/javahelpers/src/main/java/com/chri1899/javahelpers/: App.java
helpers/javahelpers/src/test/java/com/chri1899/javahelpers/: AppTest.java
javasol/src/main/java/com/chri1899/javasol/: App.java
solutions/2024-cpp/: CMakeLists.txt  data  main.cpp
solutions/2024-cpp/src/: day01.cpp
solutions/2024-cpp/src/days/: IDay.h  day01.cpp  day01.h  day02.cpp  day02.h  day03.cpp  day03.h  day04.cpp  day04.h  day05.cpp  day05.h  day06.cpp  day06.h
solutions/2024-cpp/src/utils/: Timer.cpp  Timer.h  helpers.cpp  helpers.h  parser.cpp  parser.h  readfile.cpp  readfile.h
